[gd_scene load_steps=5 format=2]

[ext_resource path="res://Options.gd" type="Script" id=1]
[ext_resource path="res://fonts/HirukoBlackAlternate.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://defaultFont.tres" type="DynamicFont" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 1524.0
margin_bottom = 924.0

[node name="HBoxContainer" type="GridContainer" parent="MarginContainer/CenterContainer"]
margin_left = 326.0
margin_top = 303.0
margin_right = 1098.0
margin_bottom = 521.0
columns = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_right = 689.0
margin_bottom = 70.0

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/CenterContainer"]
margin_left = 92.0
margin_top = 3.0
margin_right = 596.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "Wie viele Spieler?"
align = 1

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 693.0
margin_right = 772.0
margin_bottom = 70.0

[node name="OptionButton" type="OptionButton" parent="MarginContainer/CenterContainer/HBoxContainer/CenterContainer2"]
margin_right = 79.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 3 )
text = "2"
align = 1
items = [ "2", null, false, 2, null, "3", null, false, 3, null, "4", null, false, 4, null ]
selected = 0

[node name="CenterContainer3" type="CenterContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_top = 74.0
margin_right = 689.0
margin_bottom = 144.0

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/CenterContainer3"]
margin_top = 3.0
margin_right = 689.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 3 )
text = "Wie viele reale Spieler? "

[node name="CenterContainer4" type="CenterContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_left = 693.0
margin_top = 74.0
margin_right = 772.0
margin_bottom = 144.0

[node name="OptionButton2" type="OptionButton" parent="MarginContainer/CenterContainer/HBoxContainer/CenterContainer4"]
margin_right = 79.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 3 )
text = "1"
items = [ "1", null, false, 1, null, "2", null, true, 2, null, "3", null, true, 3, null, "4", null, true, 4, null ]
selected = 0

[node name="Button" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer"]
margin_top = 148.0
margin_right = 689.0
margin_bottom = 218.0
custom_fonts/font = ExtResource( 3 )
text = "Spiel starten!"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
[connection signal="item_selected" from="MarginContainer/CenterContainer/HBoxContainer/CenterContainer2/OptionButton" to="." method="_on_AnzahlSpieler_changed"]
[connection signal="item_selected" from="MarginContainer/CenterContainer/HBoxContainer/CenterContainer4/OptionButton2" to="." method="_on_AnzahlReal_selected"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/Button" to="." method="_on_Button_pressed"]
